frontend/src/App.css
#root {
  max-width: 80%; /* Relative to the viewport width */
  max-height: fit-content;
  margin: 0 auto;
  padding: 1rem;
  text-align: center;
}

body {
  
  margin: 0;
  padding: 0;
  /* overflow: hidden; *//* Prevents scrolling of the entire body */
  font-family: 'Times New Roman', Times, serif;/* Adjust as needed */
}

.larger-vert-body > div {
  display: flex;
  flex-direction: column;
}

.title {
  display: flex;
  align-items: center;
  flex-direction: row;
  background-color: #fff; /* to fill, at least */
  border: 0.156rem solid rgb(109, 109, 109); /* Adjusted to rem for scalability */
  border-radius: 0.5rem; /* Adjusted to rem for scalability */
  box-sizing: border-box;
  
  position: fixed; /* Fixes the header to the top */
  top: 0px; /* Keeps it at the top of the viewport */
  left: 0;
  right: 0;
  z-index: 1000;

  gap: 1rem;
  justify-content: space-around;

  height: 5rem;
}

.feedbacklink {
  /* flex: 1; */
  /* text-align: right; */
  padding: 0.5rem;
}

.logo {
  max-width: 4vw; /* Relative to viewport width */
  max-height: 4vw; /* Maintain aspect ratio */
  margin-right: 1rem; /* Adjusted to rem for consistency */
  padding: 0.5rem;
  will-change: filter;
  transition: filter 300ms;
}

/* Holds the content element and the map element */
.content-and-map {
  display: flex;
  flex-direction: row;
}

/* Holds the row of buttons element and the rooms list element */
.content {
  display: block;
  position: relative;
  justify-content: space-evenly;
  align-items: center;
  margin: 0 auto;
  text-align: center;
  padding: 0.5rem;
  box-sizing: border-box;
  min-width: 40%;

  margin-top: 6rem;
}

/* Holds the row of buttons and text containers above the rooms list */
.buttons-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  align-content: center;
  justify-content: center;
  gap: 1.25rem; /* Adjusted to rem for consistency */
}

.noise-level {
  outline: auto;
  padding: 2%;
  display: flex;
  flex-wrap: nowrap;
  flex-shrink: inherit;
  flex-direction: row;
}

.checkboxes {
  justify-content: space-between;
  display: flex;
  flex-direction: row;
  align-items: center;
  align-content: center;
  gap: 0.5rem;
}

.collapsible-noise {
  justify-content: space-between;
  flex-direction: column;
  align-items: center;
  align-content: center;
  gap: 1rem;
}

/* Holds the map element */
.map-container {
  padding-top: 1rem;

  display: flex;
  align-items: center;
  align-content: center;
  justify-content: center;
  justify-items: center;

  flex-wrap: wrap;
  gap: 0.25rem;
}

.canvas {
  max-width: 100%;
  max-height: fit-content;
}

/* Dimensions of the map image */
.map {
  max-width: 60vw; /* Relative to viewport width */
  max-height: 50vh; /* Relative to viewport height */
}

/* Contains the elements for the "display map" button and the "floor select" dropdown menu */
.floorbutton-and-legend-display {
  display: flex;
  /* flex-direction: column; */
  align-self: center;

  gap: 0.25rem; /* Adjusted to rem for consistency */
}

/* Contains the dropdown containers for selecting different floors and different buildings */
.dropdown-container {
  display: flex;
  align-self: center;


  gap: 0.25rem;
}

.list-header {
  display: flex;
  flex: row;
  flex-direction: row;
  align-items: center;
  align-content: center;
  justify-content: space-between;
  gap: 1rem; /* Adjusted to rem for consistency */
  position: relative;
}


/* Defines the border to hold the dropdown selections for floor select */
.dropdown-options {
  display: flex;
  flex-direction: column;
  border: 0.156rem solid rgb(109, 109, 109); /* Adjusted to rem for scalability */
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding-right: 2.5rem ;
}

.read-the-docs {
  color: #888;
}

#circle {
  margin-right: 0.25rem; /* Adjusted to rem for consistency */
  width: 1.25rem; /* Adjusted to rem for scalability */
  height: 1.25rem; /* Adjusted to rem for scalability */
  border-radius: 50%; /* Fully circular */
  outline:auto;

}

/* Door icon image */
.doorIcon {
  width: 10%; /* Relative to its parent element */
  height: 10%; /* Maintain aspect ratio */
}

.room-header {
  display: flex;
  align-items: center; /* Vertically center the items */
  justify-content: center;
  gap: 0.25rem; /* Adjusted to rem for consistency */

  padding-top: 1rem;
  padding-right: 2.5rem;
}

.room-box {
  justify-content: center;
  max-width: 100%;
}

.scrollable-list {
  justify-content: center;
  
  max-height: 50vh; /* Relative to viewport height */
  overflow: 'scroll';
  overflow-x: hidden;
  border: 2px solid rgb(109, 109, 109);
  padding: 0; /* Remove any padding */
  margin: 0; /* Remove any margin */
}

.legend{
  max-width: 80%; /* Relative to viewport width */
  max-height: fit-content; /* Relative to viewport height */
}

.legend-without-map {
  justify-content: center;
  justify-items: center;
  align-content: center;
  align-items: center;
}

.controller {
  padding-top: 1rem;
}

.menu-heading-button {
  display: flex;
  justify-content: center;
  align-content: center;
  margin-bottom: 10px;
}

.menu-buttons {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  gap: 5px;
}

@media (max-width: 1000px) {
  .scrollable-list {
    max-width: 50vh; /* Relative to viewport height */
  }

  .map {
    max-width:40vw; /* Relative to viewport width */
    justify-content: center;
    justify-items: center;
    align-content: center;
    align-items: center;
  }

  /* Holds the map element */
  .map-container {
    padding-top: 18rem;
  }

  
}

